--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,12 +17,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "lib": [
-      "es2017",
-      "DOM"
-    ],
-    "typeRoots": [
-      "./types"
-    ]
+    "lib": ["es2017", "DOM"],
+    "typeRoots": ["./types"]
   }
 }
